src/test/ui/generic-associated-types/parameter_number_and_kind.stderr
error[E0107]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/parameter_number_and_kind.rs:13:35
   |
LL |     type FErr1 = Self::E<'static, 'static>;
   |                                   ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/parameter_number_and_kind.rs:13:18
   |
LL |     type FErr1 = Self::E<'static, 'static>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ expected 1 type argument

error[E0107]: wrong number of type arguments: expected 1, found 2
  --> $DIR/parameter_number_and_kind.rs:16:41
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>;
   |                                         ^^^ unexpected type argument

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
